<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Group Project App</string>
    <string name="contDesc1">button to the living room activity</string>
    <string name="contDesc2">button to the kitchen activity</string>
    <string name="contDesc3">button to the house activity</string>
    <string name="contDesc4">button to automobile activity</string>
    <string name="contDesc5">button to information</string>
    <string name="welcomeText">Welcome to the smart home app! Please click on an icon.</string>
    <string name="contDescLR1">button to the welcome page</string>
    <string name="contDescLR2">button to add item to list</string>
    <string name="contDescLR3">button to remove item from list</string>
    <string name="contDescLR4">button for information</string>
    <string name="TVRemoteTitle">Television</string>
    <string name="TVRemoteONOFF">Turn TV On/Off</string>
    <string name="TVRemoteToggleON">ON</string>
    <string name="TVRemoteToggleOFF">OFF</string>
    <string name="TVRemoteChannelSelect">TV Channel</string>
    <string name="TVRemoteChannelS">00</string>
    <string name="channel_down">Channel Down</string>
    <string name="channel_up">Channel Up</string>
    <string name="enter">Enter</string>
    <string name="volume_down">Volume -</string>
    <string name="volume_up">Volume +</string>
    <string name="channel_up_button">channel up button</string>
    <string name="channel_enter_button">Channel enter Button</string>
    <string name="channel_down_button">channel down button</string>
    <string name="volume_down_button">volume down button</string>
    <string name="volume_up_button">volume up button</string>
    <string name="tv_info_button">TV info button</string>
    <string name="pick_a_new_item_to_add">Pick a new item to add.</string>
    <string name="lamp">Lamp</string>
    <string name="turn_lamp_on_off">Turn lamp On/Off</string>
    <string name="full_brightness">Full brightness</string>
    <string name="lamp_dimmer_controls">Lamp dimmer controls</string>
    <string name="off">Off</string>
    <string name="lamp_dimmer">Lamp dimmer</string>
    <string name="tvinfo">Clicking on the Toggle button turns the TV on/off.
        Clicking on the TV channel number allows you to change it.
        You must then press the enter button change the channel on the TV.
        Clicking on the Channel up and down buttons allow you to move through the channels one channel at a time.</string>
    <string name="livingroominfo">Living Room Activity created by Roseanne Page.
        Clicking on the + icon allows you to add an item to the list.
        Clicking on the - icon allows you to remove an item from the list.
        Clicking on a listed item brings you to a more detailed view and options for said item.</string>
    <string name="colour_controls">Colour controls</string>
    <string name="lamp_dimmer_with_colour">Lamp dimmer with colour</string>
    <string name="pick_a_color">Pick a colour</string>
    <string name="colour">Colour is now</string>
    <string-array name="colour_arrays">
        <item>White</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
    </string-array>
    <string name="currentTempText">Current Temp</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="smart_window">Smart window</string>
    <string name="window_blinds_controls">Window blinds controls</string>
    <string name="weather_img">Weather img</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="living_room">Living Room</string>
    <string name="maininfo">Smart house app created by Roseanne Page, James Lowell, Narges Karimitbar and Scott Cote.</string>


    <!--   -->
    <string name="title_houseitmlist_list">Items</string>
    <string name="title_houseitmlist_detail">house_itmlist Detail</string>
    <string name="title_houseitemlist_list">Items</string>
    <string name="title_houseitemlist_detail">house_itemlist Detail</string>
    <string name="hello">I am the Garage Door opener.</string>
    <string name="contDescHouse1">button to the welcome page</string>
    <string name="contDescHouse2">button to add item to list</string>
    <string name="contDescHouse3">button to remove item from list</string>
    <string name="contDescHouse4">button for information</string>
    <string name="settings_url_title">Garage URL</string>
    <string name="settings_url_summary">The garage opener\'s webserver endpoint</string>

    <string name="settings_secret_title">Shared Secret</string>
    <string name="settings_secret_summary">The password to open the garage</string>

    <string name="settings_ssid_title">House SSID</string>
    <string name="settings_ssid_summary">Your home\'s SSID to scan for</string>

    <string name="text_button_open">Open</string>
    <string name="text_button_stop">Stop</string>
    <string name="text_button_close">Close</string>
    <string name="garageDoorClosed">Garage Door Closed</string>
    <string name="garageDoorOpened">Garage Door Opened</string>
    <string name="garageLight">Garage Light</string>

    <string name="title_activity_weather_forecast">Outside Weather</string>
    <string name="title_activity_garage">ActivityGarage</string>
    <string name="title_activity_house_temperature">HouseTemperatureActivity</string>
    <string name="title_activity_time_picker">ActivityTimePicker</string>

    <string name="pick_time">Set Time</string>
    <string name="pick_date">Set Date</string>
    <string name="title_activity_temp_view_set">activity_temp_view_set</string>
    <string name="pick_temp">Save settings</string>
    <string name="view_settings">View Settings</string>
</resources>
