<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lr_lamp1_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roe.smarthouseapp.lr_lamp1_activity">


    <TextView
        android:text="@string/lamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lamp1Titleid"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:text="@string/turn_lamp_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lamp1toggletext"

        android:gravity="center"
        android:layout_marginStart="92dp"
        android:layout_below="@+id/lamp1Titleid"
        android:layout_alignParentStart="false"
        android:layout_marginTop="35dp"

        android:layout_centerHorizontal="true"

        android:layout_centerInParent="true"
        />

    <ToggleButton
        android:text="@string/TVRemoteONOFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        tools:text="@string/TVRemoteONOFF"
        android:textOff="@string/TVRemoteToggleOFF"
        android:textOn="@string/TVRemoteToggleON"
        android:layout_marginStart="11dp"
        android:layout_below="@+id/lamp1toggletext"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
