<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_lr_blinds_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roe.smarthouseapp.lr_lamp2_activity">

    <TextView
        android:text="@string/smart_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/windowTitleid"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:text="@string/window_blinds_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blindstext"

        android:gravity="center"
        android:layout_marginTop="14dp"

        android:layout_below="@+id/windowTitleid"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/opened"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/textView3"

        android:layout_below="@+id/blindstext"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/closed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"

        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:verticalScrollbarPosition="defaultPosition"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/weatherImg"
        android:minHeight="200dp"
        android:minWidth="200dp"
        android:contentDescription="@string/weather_img"
        android:layout_below="@+id/seekBar1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

    <TextView
        android:text="@string/currentTempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentTemp"
        android:textSize="18sp"
        android:layout_below="@+id/weatherImg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />


</RelativeLayout>
