<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roe.smarthouseapp.MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/toolbar"
        app:contentInsetStart="0dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/livingroom_icon"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:id="@+id/toLivingRoomButton"
            android:contentDescription="@string/contDesc1"
            android:layout_marginStart="15dp" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/kitchen_icon"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:id="@+id/toKitchenButton"
            android:contentDescription="@string/contDesc2"
            android:layout_marginStart="5dp" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/house_icon"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:id="@+id/toHouseButton"
            android:contentDescription="@string/contDesc3" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/automobile_icon"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:id="@+id/toAutomobileButton"
            android:contentDescription="@string/contDesc4" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/info_icon"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:id="@+id/infoButton"
            android:contentDescription="@string/contDesc5"
            android:layout_marginStart="5dp" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeText"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textAlignment="center" />


</RelativeLayout>
