<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_living_room"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roe.smarthouseapp.LivingRoomActivity"
    android:orientation="vertical"
    android:weightSum="1">
<!--<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_list"
    android:name="com.example.roe.lab1.MessageListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:layoutManager="LinearLayoutManager"
    tools:context="com.example.roe.lab1.MessageListActivity"
    tools:listitem="@layout/message_list_content" />-->
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listviewlr"
        android:layout_above="@+id/lrCompasBtn" />


    <ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/info_icon"
    android:id="@+id/lrInfoBtn"
    android:layout_alignParentTop="false"
        android:contentDescription="@string/contDescLR4"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/ic_minus"
    android:id="@+id/lrMinusBtn"
    android:contentDescription="@string/contDescLR3"
    android:layout_alignParentTop="false"
    android:layout_toEndOf="@+id/lrPlusBtn"
    android:layout_toRightOf="@+id/lrPlusBtn"
    android:layout_alignParentBottom="true"
    />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_backtowelcome"
        android:id="@+id/lrCompasBtn"
        android:contentDescription="@string/contDescLR1"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
         />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_plus"
        android:id="@+id/lrPlusBtn"
        android:contentDescription="@string/contDescLR2"

        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/lrCompasBtn"
        android:layout_marginStart="66dp" />


</RelativeLayout>
